@@ -50,7 +50,7 @@ $cvscmd = "/usr/bin/cvs -d ${cvsaccess}${cvsrep} co -p";
 $codestriker_css = "/codestriker.css";
 
 # The default viewing mode to use in the URL when creating a topic.  Can
-# be either $NORMAL_MODE or $COLOURED_MODE.
+# be either $NORMAL_MODE, $COLOURED_MODE or $COLOURED_MONO_MODE.
 $default_topic_create_mode = $NORMAL_MODE;
 
 # Set the CVS_RSH environment variable appropriately.  The indentity
