@@ -9,8 +9,14 @@ TD.line {background-color: #99cccc; font-family: Helvetica, Arial; font-size: me
 /* Normal text */
 TD.n {font-family: Helvetica, Arial; font-size: smaller}
 
+/* Normal text monospaced */
+TD.msn {font-family: Courier; font-size: smaller}
+
 /* Added text */
 TD.a {background-color: #aaffaa; font-family: Helvetica, Arial; font-size: smaller}
+
+/* Added text monospaced */
+TD.msa {background-color: #aaffaa; font-family: Courier; font-size: smaller}
 
 /* Added file */
 TD.af {background-color: #aaffaa}
@@ -18,8 +24,14 @@ TD.af {background-color: #aaffaa}
 /* Added blank text */
 TD.ab {background-color: #cccccc; font-family: Helvetica, Arial; font-size: smaller}
 
+/* Added blank text monospaced */
+TD.msab {background-color: #cccccc; font-family: Courier; font-size: smaller}
+
 /* Removed text */
 TD.r {background-color: #ff9999; font-family: Helvetica, Arial; font-size: smaller}
+
+/* Removed text monospaced */
+TD.msr {background-color: #ff9999; font-family: Courier; font-size: smaller}
 
 /* Removed file */
 TD.rf {background-color: #ff9999}
@@ -30,17 +42,23 @@ TD.rb {background-color: #cccccc; font-family: Helvetica, Arial; font-size: smal
 /* Changed text */
 TD.c {background-color: #ffff77; font-family: Helvetica, Arial; font-size: smaller}
 
+/* Changed text monospaced */
+TD.msc {background-color: #ffff77; font-family: Courier; font-size: smaller}
+
 /* Changed file */
 TD.cf {background-color: #ffff77}
 
 /* Changed blank text */
 TD.cb {background-color: #eeee77; font-family: Helvetica, Arial; font-size: smaller}
 
+/* Changed blank text monospaced */
+TD.mscb {background-color: #eeee77; font-family: Courier; font-size: smaller}
+
 /* Line number with comment */
 SPAN.com {color: #ff0000; font-family: Helvetica, Arial; font-size: smaller}
 
 /* Line number with no comment */
-SPAN.ncom {font-family: Helvetica, Arial; font-size: smaller}
+SPAN.nocom {font-family: Helvetica, Arial; font-size: smaller}
 
 /* Monospaced line with added text */
 SPAN.msa {background-color: #aaffaa; font-family: Courier, monospaced; font-size: medium}
@@ -58,6 +76,12 @@ SPAN.ms {font-family: Courier, monospaced; font-size: medium}
 SPAN.mscom {color: #ff0000; font-family: Courier, monospaced; font-size: medium}
 /* Monospaced line number with no comment */
 SPAN.msnocom {font-family: Courier, monospaced; font-size: medium}
+
+/* Smaller monospaced line number with comment */
+SPAN.smscom {color: #ff0000; font-family: Courier, monospaced; font-size: smaller}
+
+/* Smaller monospaced line number with no comment */
+SPAN.smsnocom {font-family: Courier, monospaced; font-size: smaller}
 
 /* Style used for rendering data within popup window */
 PRE.ms {font-family: Courier, monospaced; font-size: medium}
