@@ -1,5 +1,9 @@
 Version 1.4.4:
 
+* Can now view coloured diff mode either in monospace font (requires
+  more real-estate) or in variable-width font (harder to read code).
+  The choice can be made dynamically.
+
 * Added a <BASE> tag which reduces the HTML size.  Also used cookies
   more intelligently so that the dreaded edit topic and other URLs
   were cut down to size, which also helped reducing the output.
